--- a/style.css
+++ b/style.css
@@ -1,44 +1,175 @@
-h1{color:red;}
+body{
+    background:silver;
+}
+hr{
+    background: brown;
+    width: 80vw;
+    height: 5px;
+    border-style: none;
+}
+section img{
+    position:absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    object-fit: cover;
+    z-index: -1;
+}
+.titleContainer{
+    display: flex;
+    flex-wrap: wrap;
+    margin: 30vh 20vw 50vh;
+}
+.titleText{
+    color: white;
+    flex:75%;
+    padding-top: 50px;
+    font-size:8vh;
+    text-align: center;
+}
+.titleImg{
+    flex:25%;
+    width: 10px;
+}
+.page{
+    background:silver;
+    padding:10px;
+    padding-top:100px;
+    width:80%;
+    height:auto;
+}
+#page1{
+    font-size:2.5vh;
+    display: flex;
+    flex-wrap: wrap;
+    padding-left:150px;
+}
+#page2{
+    font-size:2.5vh;
+}
+#page3{
+    font-size:2.5vh;
+}
+.navBtnGroup{
+    margin: 0vh 10vw 0vh;
+}
+.navBtn{
+    flex:33%;
+    font-size:2vh;
+    width: 33%;
+    height:5vh;
+    background:brown;
+    color: white;
+    text-decoration: none;
+    border: none;
+    font-weight: bold;
+}
+.navBtn:hover{
+    cursor: pointer;
+    background: darkred;
+    color: rgb(145, 145, 145);
+    transition: .2s;
+}
+.TextItem{
+    display: inline-block;
+    flex: 1;
+    padding-left:5vw;
+    padding-top: 5vh;
+    align-content: center;
+    width: 40vw;
+}
+.ImgItem{
+    display: inline-block;
+    flex: 1;
+    padding-left:5vw;
+}
+.pageDivider{
+    flex: 100%;
+    padding: 5vh;
+}
+.scene {
+    width: 400px;
+    height: 400px;
+    perspective: 800px;
+    transition: scale .25s;
+}
+.scene:hover{
+    scale: 110%;
+}
+.cube {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    transform-style: preserve-3d;
+    transition: transform 1s;
+    transform: translateZ(-100px);
+}
+.cube__face {
+    position: absolute;
+    width: 400px;
+    height: 400px;
+    background: red;
+    text-align: center;
+}
+.cube__face--front  { transform: rotateY(  0deg); }
+.cube__face--right  { transform: rotateY( 90deg); }
+.cube__face--back   { transform: rotateY(180deg); }
+.cube__face--left   { transform: rotateY(-90deg); }
+.cube__face--top    { transform: rotateX( 90deg); }
+.cube__face--bottom { transform: rotateX(-90deg); }
+.cube__face--front  { transform: rotateY(  0deg) translateZ(200px); }
+.cube__face--right  { transform: rotateY( 90deg) translateZ(200px); }
+.cube__face--back   { transform: rotateY(180deg) translateZ(200px); }
+.cube__face--left   { transform: rotateY(-90deg) translateZ(200px); }
+.cube__face--top    { transform: rotateX( 90deg) translateZ(200px); }
+.cube__face--bottom { transform: rotateX(-90deg) translateZ(200px); }
 
-.page{width:80vw;height:80vh;border:1px solid red}
-nav ul li{display:inline;}
-#page1{background:red}
-#page2{background:green}
-#page3{background:blue}
+.endbarGroup{
+    background: darkred;
+    margin: 20vh 0vw 0vh;
+}
+.endbar{
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0vh 20vw 3vh;
+}
+.endbarElement{
+    flex: 1;
+    font-size:2vh;
+    padding-top: 3vh;
+    padding-bottom: 3vh;
+    text-align: center;
+}
 
 /*for responsive menu*/
 #hamIcon{display:none;}
 @media screen and (max-width:800px){
-    nav ul li{display:block;} /*make a menu items vertical*/
-    #hamIcon{display: block;} /* unhide menu icon */
-    nav ul{display:none;} /*hide the menu item list*/
-}
+    #hamIcon{display: inline-block;} /* unhide menu icon */
+    nav div{display:none;} /*hide the menu item list*/
 
-#ball {
-    background: cyan;
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: background 0.5s;
-    transition: border-radius 1s;
-}
-
-#ball:hover{
-    background: green;
-    border-radius: 25%;
-}
-
-@keyframes ballFrames { /*keyframes to change properties*/
-    0% {font-size: 0.4em;width:50px}
-    25% {font-size: 1em;width:80px}
-    50% {font-size: 2em;width:150px}
-    100% {font-size: 0.2em;width:50px}
-}
-
-.ballAnim{
-animation:ballFrames 1s; /*run animation for 1s*/
+    .titleText{
+        flex:5;
+        font-size:5vh;
+        text-align: center;
+    }
+    .navBtn{
+        flex:100%;
+        font-size:2vh;
+        width:96vw;
+        height:5vh;
+        background: brown;
+        color: white;
+        text-decoration: none;
+        font-weight: bold;
+    }
+    .dropdownMenuImg{
+        justify-self: left;
+        height:4vh;
+        width:auto;
+    }
+    .dropdownMenuImg:hover{
+        opacity: 50%;
+        transition: .5s;
+    }
 }
