--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background:silver;
+    background:white;
 }
 hr{
     background: brown;
@@ -19,21 +19,20 @@ section img{
 .titleContainer{
     display: flex;
     flex-wrap: wrap;
-    margin: 30vh 20vw 50vh;
+    margin: 30vh 10vw 50vh;
 }
 .titleText{
-    color: white;
-    flex:75%;
-    padding-top: 50px;
-    font-size:8vh;
+    color: rgb(175, 175, 175);
+    flex:3;
+    font-size:4vw;
     text-align: center;
 }
 .titleImg{
-    flex:25%;
-    width: 10px;
+    flex:1;
+    width: 20%;
+    height: 20%;
 }
 .page{
-    background:silver;
     padding:10px;
     padding-top:100px;
     width:80%;
@@ -47,15 +46,21 @@ section img{
 }
 #page2{
     font-size:2.5vh;
+    display: flex;
+    flex-wrap: wrap;
+    padding-left:150px;
 }
 #page3{
     font-size:2.5vh;
+    display: flex;
+    flex-wrap: wrap;
+    padding-left:150px;
 }
 .navBtnGroup{
     margin: 0vh 10vw 0vh;
 }
 .navBtn{
-    flex:33%;
+    flex:1;
     font-size:2vh;
     width: 33%;
     height:5vh;
@@ -71,23 +76,27 @@ section img{
     color: rgb(145, 145, 145);
     transition: .2s;
 }
+.ImgItem{
+    display: inline-block;
+    flex: 30%;
+    padding-left:5vw;
+}
 .TextItem{
     display: inline-block;
-    flex: 1;
+    flex: 70%;
     padding-left:5vw;
     padding-top: 5vh;
     align-content: center;
     width: 40vw;
 }
-.ImgItem{
-    display: inline-block;
-    flex: 1;
-    padding-left:5vw;
+.ImgSize{
+    width: 20vw;
 }
 .pageDivider{
     flex: 100%;
     padding: 5vh;
 }
+
 .scene {
     width: 400px;
     height: 400px;
@@ -105,11 +114,27 @@ section img{
     transition: transform 1s;
     transform: translateZ(-100px);
 }
+.scene2 {
+    width: 400px;
+    height: 400px;
+    perspective: 800px;
+    transition: scale .25s;
+}
+.scene2:hover{
+    scale: 110%;
+}
+.cube2 {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    transform-style: preserve-3d;
+    transition: transform 1s;
+    transform: translateZ(-100px);
+}
 .cube__face {
     position: absolute;
     width: 400px;
     height: 400px;
-    background: red;
     text-align: center;
 }
 .cube__face--front  { transform: rotateY(  0deg); }
@@ -135,6 +160,7 @@ section img{
     margin: 0vh 20vw 3vh;
 }
 .endbarElement{
+    color: white;
     flex: 1;
     font-size:2vh;
     padding-top: 3vh;
@@ -145,23 +171,27 @@ section img{
 /*for responsive menu*/
 #hamIcon{display:none;}
 @media screen and (max-width:800px){
-    #hamIcon{display: inline-block;} /* unhide menu icon */
+    #hamIcon{display: block;} /* unhide menu icon */
     nav div{display:none;} /*hide the menu item list*/
 
+    hr{
+        width: 100vw;
+    }
+    .titleContainer{
+        margin: 0vh 10vw 10vh;
+    }
     .titleText{
-        flex:5;
-        font-size:5vh;
-        text-align: center;
+        flex: 100%;
+        font-size: 10vw;
+    }
+    .titleImg{
+        flex: 100%;
+    }
+    .navBtnGroup{
+        margin: 0vh 0vw 0vh;
     }
     .navBtn{
-        flex:100%;
-        font-size:2vh;
         width:96vw;
-        height:5vh;
-        background: brown;
-        color: white;
-        text-decoration: none;
-        font-weight: bold;
     }
     .dropdownMenuImg{
         justify-self: left;
@@ -171,5 +201,15 @@ section img{
     .dropdownMenuImg:hover{
         opacity: 50%;
         transition: .5s;
+    }
+    .ImgItem{
+        padding-left:0;
+    }
+    .TextItem{
+        padding-left:0;
+        padding-top: 5vh;
+        padding-bottom: 5vh;
+        align-content: center;
+        width: 40vw;
     }
 }
